# schmetterling

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  compile.sh  exec.sh  justfile  run_test.sh  test.sh
docs/html/: doxygen_crawl.html  index.html  md_README.html  md_TODO.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_0.js  all_1.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: md_README.tex  md_TODO.tex  refman.tex
include/: state.hpp
include/bitboard/: bitBoardUtil.hpp  bitboard.hpp
include/board/: bitboard.hpp  board.hpp  coord.hpp  fen.hpp  helper.hpp  moves.hpp  piece.hpp  pieceList.hpp  squares.hpp  types.hpp
include/evaluation/: evaluation.hpp  pieceSquareTables.hpp
include/helpers/: fen.hpp
include/moves/: attack_squares.hpp  move_generation.hpp  moves.hpp
include/moves/generation/: attack_data.hpp  attack_squares.hpp  move_gen.hpp  move_generation.hpp  move_generation_fast.hpp
src/: main.cpp  perft.cpp
src/board/: bitboard.cpp  board.cpp  fen.cpp
src/evaluation/: evaluation.cpp
src/helpers/: fen.cpp
src/moves/: move_generation.cpp  moves.hpp
src/moves/generation/: attack_data.cpp  move_generation.cpp  move_generation_fast.cpp
test/board/: test_bitboard.cpp  test_board.cpp  test_fen.cpp  test_squares.cpp
test/evaluation/: test_evaluation.cpp
test/moves/: test_move_generation.cpp  test_moves.cpp
tests/: CMakeLists.txt
tests/board/: test_board.cpp  test_coord.cpp
tests/helpers/: test_fen.cpp
